# opc-platform

./: .gitignore  README.md  package.json  tsconfig.json  turbo.json
apps/admin/: Dockerfile  next.config.ts  package.json  tailwind.config.ts
apps/admin/app/: globals.css  layout.tsx
apps/admin/app/(admin)/: layout.tsx  page.tsx
apps/admin/app/login/: page.tsx
apps/admin/components/admin/: data-table.tsx  (+2 more)
apps/admin/lib/: api.ts  utils.ts
apps/ai-service/: .env.example  Dockerfile  pyproject.toml  requirements.txt
apps/ai-service/app/: __init__.py  config.py  main.py
apps/ai-service/app/api/: agents.py  chat.py  knowledge.py  mcp.py  models.py  workflows.py
apps/ai-service/app/core/: guardrails.py
apps/ai-service/app/core/langgraph/: __init__.py  workflows.py
apps/ai-service/app/core/mcp/: __init__.py  client.py
apps/ai-service/app/models/: database.py  schemas.py
apps/ai-service/app/services/: cost_service.py  dify_client.py  llm_service.py  memory_service.py
apps/api-gateway/: .env.example  Dockerfile  package.json  tsconfig.build.json  tsconfig.json
apps/api-gateway/src/: app.module.ts  main.ts
apps/web/: Dockerfile  next.config.ts  package.json  tailwind.config.ts  tsconfig.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/lib/: api.ts  utils.ts
infrastructure/docker/: .env.example  docker-compose.prod.yml  docker-compose.yml  init-db.sql
infrastructure/docker/nginx/: nginx.conf
infrastructure/docker/ssrf_proxy/: docker-entrypoint.sh  squid.conf.template
infrastructure/scripts/: backup.sh  dev.sh  setup.sh
(+60 files in other folders)
