[tool.poetry]
name = "opc-ai-service"
version = "0.1.0"
description = "OPC智能体系统 - AI服务层，负责智能体编排、Dify集成、MCP协议适配"
authors = ["OPC Team"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
# Web框架
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
sse-starlette = "^2.1.0"
python-multipart = "^0.0.18"
# LangChain生态
langchain = "^0.3.0"
langchain-openai = "^0.2.0"
langchain-community = "^0.3.0"
langgraph = "^0.2.0"
# 异步HTTP客户端（用于调用Dify API）
httpx = "^0.27.0"
# 数据校验与配置
pydantic = "^2.9.0"
pydantic-settings = "^2.6.0"
# 数据库
sqlalchemy = {extras = ["asyncio"], version = "^2.0.35"}
asyncpg = "^0.30.0"
redis = {extras = ["hiredis"], version = "^5.2.0"}
# 认证
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
# Token计数
tiktoken = "^0.8.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
httpx = "^0.27.0"
ruff = "^0.7.0"
mypy = "^1.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
